# SkyPostDelivery

./: .env.example  .gitignore  .gitlab-ci-dev.yml  .gitlab-ci-prod.yml  .gitlab-ci.yml  LICENSE  README.md  env.example  shell.nix
admin_panel/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/agents/drone-agent/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
backend/agents/drone-agent/app/: dependencies.py  main.py
backend/agents/drone-agent/app/config/: settings.py
backend/agents/drone-agent/app/core/: ros_bridge.py  state_machine.py  websocket_client.py
backend/agents/drone-agent/app/hardware/: camera_handler.py  flight_controller.py  flight_manager.py  ros_bridge.py
backend/agents/drone-agent/app/models/: messages.py  task.py  telemetry.py
backend/agents/drone-agent/app/services/: delivery_service.py  telemetry_service.py  video_service.py
backend/agents/drone-agent/app/utils/: logger.py  retry.py
backend/agents/drone-agent/root_scripts/: flight_back.py
backend/agents/drone-agent/run_as_service/: drone-agent.service  install.sh  uninstall.sh
backend/agents/drone-agent/scripts/: delivery_flight.py  flight_back.py
backend/agents/drone-agent/test_scripts/: simple_flight_test.py
backend/agents/drone-agent/tests/: conftest.py  test_delivery_service.py  test_state_machine.py  test_telemetry_service.py  test_video_service.py
backend/agents/drone-agent/tools/: generate_aruco_markers.py
docs/: API-SPEC.md  ARCHITECTURE.md  DATABASE.md  MONITORING.md  STRUCTURE.md
docs/en/: CI-CD.md  (+7 more)
(+539 files in other folders)
