[tool.poetry]
name = "drone-agent"
version = "1.0.0"
description = "Drone agent for SkyPostDelivery system"
authors = ["skr1ms"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^12.0"
pydantic = "^2.0"
python-dotenv = "^1.0"
opencv-python-headless = "^4.8"
numpy = "^1.24"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-mock = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
